--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,11 @@
 
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
+
+    <script
+      src="//widget.tagembed.com/embed.min.js"
+      type="text/javascript"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
