career changes ui

--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,13 @@
     <title>React App</title>
 
     <!--====== Bootstrap css ======-->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
 
     <!--====== Fontawesome css ======-->
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/assets/css/font-awesome.min.css"
+    />
 
     <!--====== Fontawesome css ======-->
     <link rel="stylesheet" href="assets/css/animate.min.css" />
@@ -50,10 +53,10 @@
     <link rel="stylesheet" href="assets/css/slick.css" />
 
     <!--====== Default css ======-->
-    <link rel="stylesheet" href="assets/css/default.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/default.css" />
 
     <!--====== Style css ======-->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
 
     <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
     <script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
