--- a/public/index.html
+++ b/public/index.html
@@ -82,13 +82,9 @@
 
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
-
-    <script
-      src="//widget.tagembed.com/embed.min.js"
-      type="text/javascript"
-    ></script>
+    <script src="assets/js/mouse-scroll-smooth.js"></script>
   </head>
-  <body>
+  <body id="style-4">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
