--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <!--====== Fontawesome css ======-->
+    <!--====== Animate css ======-->
     <link rel="stylesheet" href="assets/css/animate.min.css" />
 
     <!--====== Slick css ======-->
@@ -53,7 +53,7 @@
 
     <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
 
-    <!-- ====== Jquery cdn -->
+    <!--====== Jquery cdn ======-->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"
       integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ=="
@@ -65,7 +65,6 @@
     <script src="assets/js/bootstrap.min.js"></script>
 
     <!--====== counterup js == ====-->
-
     <script src="assets/js/waypoints.min.js"></script>
 
     <!--====== wow js ======-->
