--- a/public/index.html
+++ b/public/index.html
@@ -42,16 +42,13 @@
     <!--====== Animate css ======-->
     <link rel="stylesheet" href="assets/css/animate.min.css" />
 
-    <!--====== Slick css ======-->
-    <link rel="stylesheet" href="assets/css/slick.css" />
-
     <!--====== Default css ======-->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/default.css" />
 
     <!--====== Style css ======-->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
 
-    <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
+    <!-- <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script> -->
 
     <!--====== Jquery cdn ======-->
     <script
@@ -65,13 +62,10 @@
     <script src="assets/js/bootstrap.min.js"></script>
 
     <!--====== counterup js == ====-->
-    <script src="assets/js/waypoints.min.js"></script>
+    <!-- <script src="assets/js/waypoints.min.js"></script> -->
 
     <!--====== wow js ======-->
-    <script src="assets/js/wow.js"></script>
-
-    <!--====== Slick js ======-->
-    <script src="assets/js/slick.min.js"></script>
+    <!-- <script src="assets/js/wow.js"></script> -->
 
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
