--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/modularize favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <meta
+      name="title"
+      content="Modularize - AWS Google Cloud NodeJS Full-stack Development Service."
+    />
+    <meta
+      property="og:title"
+      content="Modularize - AWS Google Cloud NodeJS Full-stack Development Service."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://modularize.io" />
+
+    <meta property="og:site_name" content="modularize.io" />
+    <meta
+      property="og:description"
+      content="We are a Full-stack Development Service company based in India. We have years of experience developing JavaScript, NodeJS, AWS Cloud, Google Cloud based services. Our team includes certified AWS and Google Cloud professionals. AWS APN Select Consulting Partner."
+    />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We are a Full-stack Development Service company based in India. We have years of experience developing JavaScript, NodeJS, AWS Cloud, Google Cloud based services. Our team includes certified AWS and Google Cloud professionals. AWS APN Select Consulting Partner."
     />
+    <meta name="city" content="Surat" />
+    <meta name="country" content="India" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +44,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>
+      Modularize - AWS Google Cloud NodeJS Full-stack Development Service.
+    </title>
 
     <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
