--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/modularize favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="title" content="Modularize - AWS Google Cloud NodeJS Full-stack Development Service." />
-  <meta property="og:title" content="Modularize - AWS Google Cloud NodeJS Full-stack Development Service." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://modularize.io" />
-  <meta property="og:site_name" content="modularize.io" />
-  <meta property="og:description"
-    content="We are a Full-stack Development Service company based in India. We have years of experience developing JavaScript, NodeJS, AWS Cloud, Google Cloud based services. Our team includes certified AWS and Google Cloud professionals. AWS APN Select Consulting Partner." />
-  <meta name="description"
-    content="We are a Full-stack Development Service company based in India. We have years of experience developing JavaScript, NodeJS, AWS Cloud, Google Cloud based services. Our team includes certified AWS and Google Cloud professionals. AWS APN Select Consulting Partner." />
-  <meta name="city" content="Surat" />
-  <meta name="country" content="India" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="title"
+      content="Modularize - AWS Google Cloud NodeJS Full-stack Development Service."
+    />
+    <meta
+      property="og:title"
+      content="Modularize - AWS Google Cloud NodeJS Full-stack Development Service."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://modularize.io" />
+    <meta property="og:site_name" content="modularize.io" />
+    <meta
+      property="og:description"
+      content="We are a Full-stack Development Service company based in India. We have years of experience developing JavaScript, NodeJS, AWS Cloud, Google Cloud based services. Our team includes certified AWS and Google Cloud professionals. AWS APN Select Consulting Partner."
+    />
+    <meta
+      name="description"
+      content="We are a Full-stack Development Service company based in India. We have years of experience developing JavaScript, NodeJS, AWS Cloud, Google Cloud based services. Our team includes certified AWS and Google Cloud professionals. AWS APN Select Consulting Partner."
+    />
+    <meta name="city" content="Surat" />
+    <meta name="country" content="India" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <!--
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -32,49 +42,58 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Modularize - AWS Google Cloud NodeJS Full-stack Development Service.</title>
+    <title>
+      Modularize - AWS Google Cloud NodeJS Full-stack Development Service.
+    </title>
 
-  <!--====== Bootstrap css ======-->
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
+    <!--====== Bootstrap css ======-->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
 
-  <!--====== Fontawesome css ======-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
-    integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--====== Fontawesome css ======-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-  <!--====== Animate css ======-->
-  <link rel="stylesheet" href="assets/css/animate.min.css" />
+    <!--====== Animate css ======-->
+    <link rel="stylesheet" href="assets/css/animate.min.css" />
 
-  <!--====== Default css ======-->
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/default.css" />
+    <!--====== Default css ======-->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/default.css" />
 
-  <!--====== Style css ======-->
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
+    <!--====== Style css ======-->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
 
-  <!-- <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script> -->
+    <!-- <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script> -->
 
-  <!--====== Jquery cdn ======-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"
-    integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!--====== Jquery cdn ======-->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"
+      integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
-  <!--====== Bootstrap js ======-->
-  <script src="assets/js/bootstrap.min.js"></script>
+    <!--====== Bootstrap js ======-->
+    <script src="assets/js/bootstrap.min.js"></script>
 
-  <!--====== counterup js == ====-->
-  <!-- <script src="assets/js/waypoints.min.js"></script> -->
+    <!--====== counterup js == ====-->
+    <!-- <script src="assets/js/waypoints.min.js"></script> -->
 
-  <!--====== wow js ======-->
-  <!-- <script src="assets/js/wow.js"></script> -->
+    <!--====== wow js ======-->
+    <!-- <script src="assets/js/wow.js"></script> -->
 
-  <!--====== Main js ======-->
-  <script src="assets/js/main.js"></script>
-</head>
+    <!--====== Main js ======-->
+    <script src="assets/js/main.js"></script>
+  </head>
 
-<body id="style-4">
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!--
+  <body id="style-4">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -84,6 +103,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-</body>
-
+  </body>
 </html>
