--- a/public/index.html
+++ b/public/index.html
@@ -50,16 +50,10 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
 
     <!--====== Fontawesome css ======-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
-      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+    <script
+      src="https://kit.fontawesome.com/3d74a01bb7.js"
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
-    <!--====== Animate css ======-->
-    <link rel="stylesheet" href="assets/css/animate.min.css" />
+    ></script>
 
     <!--====== Default css ======-->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/default.css" />
@@ -67,24 +61,20 @@
     <!--====== Style css ======-->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" />
 
-    <!-- <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script> -->
-
     <!--====== Jquery cdn ======-->
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"
-      integrity="sha512-jGsMH83oKe9asCpkOVkBnUrDDTp8wl+adkB2D+//JtlxO4SrLoJdhbOysIFQJloQFD+C4Fl1rMsQZF76JjV0eQ=="
+      src="https://code.jquery.com/jquery-1.12.4.min.js"
+      integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     ></script>
 
     <!--====== Bootstrap js ======-->
-    <script src="assets/js/bootstrap.min.js"></script>
-
-    <!--====== counterup js == ====-->
-    <!-- <script src="assets/js/waypoints.min.js"></script> -->
-
-    <!--====== wow js ======-->
-    <!-- <script src="assets/js/wow.js"></script> -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.min.js"
+      integrity="sha512-a6ctI6w1kg3J4dSjknHj3aWLEbjitAXAjLDRUxo2wyYmDFRcz2RJuQr5M3Kt8O/TtUSp8n2rAyaXYy1sjoKmrQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
